fix: fix index not saving to disk